[Fix] z-index

--- a/src/components/menu/menu.module.css
+++ b/src/components/menu/menu.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 11;
+  z-index: 12;
   background-color: #363233;
   display: flex;
   padding: 22.5vh 0;
